--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASTROCET_sample</title>
+    <title>AstroCET</title>
     <link rel="icon" href="images/logo.png" type="shortcut-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
