--- a/index.html
+++ b/index.html
@@ -48,12 +48,26 @@
         <h1>Events</h1>
 
         <div class="event_cards">
-            <h3> Event Name</h3>
+            
             <div class="card">
-                <img src="/images/Image 3.png" alt="event_poster"/>            
-                <img src="/images/Image 4.png" alt="event_poster"/>            
-                <img src="/images/Image 5.png" alt="event_poster"/>            
-                <img src="/images/Image 6.png" alt="event_poster"/>            
+                <h3> Event Name</h3>
+                <img src="/images/Image 3.png" alt="event_poster"/>              
+            </div>
+            <div class="card">
+                <h3> Event Name</h3>
+                <img src="/images/Image 4.png" alt="event_poster"/>              
+            </div>
+            <div class="card">
+                <h3> Event Name</h3>
+                <img src="/images/Image 5.png" alt="event_poster"/>              
+            </div>
+            <div class="card">
+                <h3> Event Name</h3>
+                <img src="/images/Image 5.png" alt="event_poster"/>              
+            </div>
+            <div class="card">
+                <h3> Event Name</h3>
+                <img src="/images/Image 5.png" alt="event_poster"/>              
             </div>
         </div>
     </section>
