--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/event.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/EventCards.css">
 </head>
 
 <body>
@@ -47,29 +49,92 @@
     <section class="events">
         <h1>Events</h1>
 
-        <div class="event_cards">
+        <!-- <div class="event_cards">
+            <div class="card">
+                <img src="/images/Image 3.png" alt="event_poster" />
+                <div>
+                    <div>
+                    <span><p><a href="#">Learn more ...</a></p></span>
+                </div>
+                </div>
+            </div>
             
-            <div class="card">
-                <h3> Event Name</h3>
-                <img src="/images/Image 3.png" alt="event_poster"/>              
-            </div>
-            <div class="card">
-                <h3> Event Name</h3>
-                <img src="/images/Image 4.png" alt="event_poster"/>              
-            </div>
-            <div class="card">
-                <h3> Event Name</h3>
-                <img src="/images/Image 5.png" alt="event_poster"/>              
-            </div>
-            <div class="card">
-                <h3> Event Name</h3>
-                <img src="/images/Image 5.png" alt="event_poster"/>              
-            </div>
-            <div class="card">
-                <h3> Event Name</h3>
-                <img src="/images/Image 5.png" alt="event_poster"/>              
-            </div>
-        </div>
+        </div> -->
+        
+  <figure class="snip1527">
+    <div class="image"><img src="/images/Image 5.png"
+        alt="pr-sample23" /></div>
+    <figcaption>
+      <div class="date"><span class="day">28</span><span class="month">Oct</span></div>
+      <h3>Event Name 1</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
+      </p>
+    </figcaption>
+    <a href="#"></a>
+  </figure>
+  <figure class="snip1527">
+    <div class="image"><img src="/images/Image 3.png"
+        alt="pr-sample24" /></div>
+    <figcaption>
+      <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
+      <h3>Event Name</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
+      </p>
+    </figcaption>
+    <a href="#"></a>
+  </figure>
+  <figure class="snip1527">
+    <div class="image"><img src="/images/Image 4.png"
+        alt="pr-sample25" /></div>
+    <figcaption>
+      <div class="date"><span class="day">01</span><span class="month">Dec</span></div>
+      <h3>Event Name 3</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
+      </p>
+    </figcaption>
+    <a href="#"></a>
+  </figure>
+  <figure class="snip1527">
+    <div class="image"><img src="/images/Image 5.png"
+        alt="pr-sample23" /></div>
+    <figcaption>
+      <div class="date"><span class="day">28</span><span class="month">Oct</span></div>
+      <h3>Event Name 1</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
+      </p>
+    </figcaption>
+    <a href="#"></a>
+  </figure>
+  <figure class="snip1527">
+    <div class="image"><img src="/images/Image 3.png"
+        alt="pr-sample24" /></div>
+    <figcaption>
+      <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
+      <h3>Event Name</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
+      </p>
+    </figcaption>
+    <a href="#"></a>
+  </figure>
+  <figure class="snip1527">
+    <div class="image"><img src="/images/Image 4.png"
+        alt="pr-sample25" /></div>
+    <figcaption>
+      <div class="date"><span class="day">01</span><span class="month">Dec</span></div>
+      <h3>Event Name 3</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
+      </p>
+    </figcaption>
+    <a href="#"></a>
+  </figure>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
+
     </section>
 
     <section>
