--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
       </p>
+      <textbutton class="bttn">Register now</textbutton>
     </figcaption>
     <a href="#"></a>
   </figure>
@@ -82,6 +83,8 @@
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
       </p>
+      <textbutton class="bttn">Register now</textbutton>
+
     </figcaption>
     <a href="#"></a>
   </figure>
@@ -94,6 +97,8 @@
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
       </p>
+      <textbutton class="bttn">Register now</textbutton>
+
     </figcaption>
     <a href="#"></a>
   </figure>
@@ -106,6 +111,8 @@
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
       </p>
+      <textbutton class="bttn">Register now</textbutton>
+
     </figcaption>
     <a href="#"></a>
   </figure>
@@ -118,6 +125,8 @@
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
       </p>
+      <textbutton class="bttn">Register now</textbutton>
+
     </figcaption>
     <a href="#"></a>
   </figure>
@@ -130,6 +139,8 @@
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
       </p>
+      <textbutton class="bttn">Register now</textbutton>
+
     </figcaption>
     <a href="#"></a>
   </figure>
