--- a/index.html
+++ b/index.html
@@ -2,187 +2,191 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AstroCET</title>
-    <link rel="icon" href="images/logo.png" type="shortcut-icon">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/event.css">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AstroCET</title>
+  <link rel="icon" href="images/logo.png" type="shortcut-icon">
+  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/event.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/EventCards.css">
 </head>
 
 <body>
-    <section class="home">
-        <header>
-            <nav class="navigation">
-                <ul>
-                    <li class="logo show-mobile">
-                        <a href="index.html"><img src="images/logo.png" alt="logo"></a>
-                    </li>
-                    <li class="menu show-mobile">
-                        <img src="images/menu.svg" alt="menu">
-                    </li>
-                    <span class="nav-items hide-mobile">
-                        <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Contact us</a></li>
-                    </span>
+  <section class="home">
+    <header>
+      <nav class="navigation">
+        <ul>
+          <li class="logo show-mobile">
+            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+          </li>
+          <li class="menu show-mobile">
+            <img src="images/menu.svg" alt="menu">
+          </li>
+          <span class="nav-items hide-mobile">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Contact us</a></li>
+          </span>
 
-                </ul>
-            </nav>
-            <div class="hero">
-                <h1>ASTROCET</h1>
-                <p class="tagline">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <a href="#" id="welcome">Welcome</a>
-                <div class="scroll">
-                    <img src="images/scroll.svg" alt="scroll trigger" width="2%">
-                </div>
-            </div>
-
-        </header>
-    </section>
-
-    <section class="events">
-        <h1>Events</h1>
-
-        <!-- <div class="event_cards">
-            <div class="card">
-                <img src="/images/Image 3.png" alt="event_poster" />
-                <div>
-                    <div>
-                    <span><p><a href="#">Learn more ...</a></p></span>
-                </div>
-                </div>
-            </div>
-            
-        </div> -->
-        
-  <figure class="snip1527">
-    <div class="image"><img src="/images/Image 5.png"
-        alt="pr-sample23" /></div>
-    <figcaption>
-      <div class="date"><span class="day">28</span><span class="month">Oct</span></div>
-      <h3>Event Name 1</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
-      </p>
-      <textbutton class="bttn">Register now</textbutton>
-    </figcaption>
-    <a href="#"></a>
-  </figure>
-  <figure class="snip1527">
-    <div class="image"><img src="/images/Image 3.png"
-        alt="pr-sample24" /></div>
-    <figcaption>
-      <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
-      <h3>Event Name</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
-      </p>
-      <textbutton class="bttn">Register now</textbutton>
-
-    </figcaption>
-    <a href="#"></a>
-  </figure>
-  <figure class="snip1527">
-    <div class="image"><img src="/images/Image 4.png"
-        alt="pr-sample25" /></div>
-    <figcaption>
-      <div class="date"><span class="day">01</span><span class="month">Dec</span></div>
-      <h3>Event Name 3</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
-      </p>
-      <textbutton class="bttn">Register now</textbutton>
-
-    </figcaption>
-    <a href="#"></a>
-  </figure>
-  <figure class="snip1527">
-    <div class="image"><img src="/images/Image 5.png"
-        alt="pr-sample23" /></div>
-    <figcaption>
-      <div class="date"><span class="day">28</span><span class="month">Oct</span></div>
-      <h3>Event Name 1</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
-      </p>
-      <textbutton class="bttn">Register now</textbutton>
-
-    </figcaption>
-    <a href="#"></a>
-  </figure>
-  <figure class="snip1527">
-    <div class="image"><img src="/images/Image 3.png"
-        alt="pr-sample24" /></div>
-    <figcaption>
-      <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
-      <h3>Event Name</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
-      </p>
-      <textbutton class="bttn">Register now</textbutton>
-
-    </figcaption>
-    <a href="#"></a>
-  </figure>
-  <figure class="snip1527">
-    <div class="image"><img src="/images/Image 4.png"
-        alt="pr-sample25" /></div>
-    <figcaption>
-      <div class="date"><span class="day">01</span><span class="month">Dec</span></div>
-      <h3>Event Name 3</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur nulla suscipit natus ut exercitationem tenetur?
-      </p>
-      <textbutton class="bttn">Register now</textbutton>
-
-    </figcaption>
-    <a href="#"></a>
-  </figure>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
-
-    </section>
-
-    <section>
-        <div class="team">
-            <h2>WANT TO CONNECT WITH US?</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur<br> adipisicing elit. Aperiam, odio?</p>
-            <button>MEET OUR TEAM</button>
+        </ul>
+      </nav>
+      <div class="hero">
+        <h1>ASTROCET</h1>
+        <p class="tagline">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <a href="#" id="welcome">Welcome</a>
+        <div class="scroll">
+          <img src="images/scroll.svg" alt="scroll trigger" width="2%">
         </div>
-    </section>
+      </div>
 
-    <footer>
-        <div class="q-links">
-            <h3>QUICK LINKS</h3>
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </div>
+    </header>
+  </section>
 
-        <div class="address">
+  <section class="events" id="events">
+    <h1>Events</h1>
+    <figure class="snip1527">
+      <div class="image"><img src="/images/Image 5.png" alt="pr-sample23" /></div>
+      <figcaption>
+        <div class="date"><span class="day">28</span><span class="month">Oct</span></div>
+        <h3>Event Name 1</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur
+          nulla suscipit natus ut exercitationem tenetur?
+        </p>
+        <textbutton class="bttn">Register now</textbutton>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1527">
+      <div class="image"><img src="/images/Image 3.png" alt="pr-sample24" /></div>
+      <figcaption>
+        <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
+        <h3>Event Name</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur
+          nulla suscipit natus ut exercitationem tenetur?
+        </p>
+        <textbutton class="bttn">Register now</textbutton>
 
-            <img src="images/location.svg" alt="location tag">
-            <p>Engineering College<br>Kulathoor Rd,<br>Sreekariyam, Thiruvananthapuram<br> Kerala 695016</p>
-        </div>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1527">
+      <div class="image"><img src="/images/Image 4.png" alt="pr-sample25" /></div>
+      <figcaption>
+        <div class="date"><span class="day">01</span><span class="month">Dec</span></div>
+        <h3>Event Name 3</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur
+          nulla suscipit natus ut exercitationem tenetur?
+        </p>
+        <textbutton class="bttn">Register now</textbutton>
 
-        <div class="social-media">
-            <a href="#"><img src="images/facebook.svg" alt="facebook-icon"></a>
-            <a href="#"><img src="images/instagram.svg" alt="instagram-icon"></a>
-            <a href="#"><img src="images/email.svg" alt="email-icon"></a>
-            <p>Lorem ipsum dolor sit,<br> consectetur adipisicing elit.</p>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1527">
+      <div class="image"><img src="/images/Image 5.png" alt="pr-sample23" /></div>
+      <figcaption>
+        <div class="date"><span class="day">28</span><span class="month">Oct</span></div>
+        <h3>Event Name 1</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur
+          nulla suscipit natus ut exercitationem tenetur?
+        </p>
+        <textbutton class="bttn">Coming Soon</textbutton>
 
-        </div>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1527">
+      <div class="image"><img src="/images/Image 3.png" alt="pr-sample24" /></div>
+      <figcaption>
+        <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
+        <h3>Event Name</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur
+          nulla suscipit natus ut exercitationem tenetur?
+        </p>
+        <textbutton class="bttn">Register now</textbutton>
 
-    </footer>
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <figure class="snip1527">
+      <div class="image"><img src="/images/Image 4.png" alt="pr-sample25" /></div>
+      <figcaption>
+        <div class="date"><span class="day">01</span><span class="month">Dec</span></div>
+        <h3>Event Name 3</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur
+          nulla suscipit natus ut exercitationem tenetur?
+        </p>
+        <textbutton class="bttn">Coming Soon</textbutton>
+
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+  </section>
+  <section class="events_research" id="events_research">
+    <h1>Research Projects</h1>
+    <figure class="snip1527">
+      <div class="image"><img src="/images/Image 3.png" alt="pr-sample24" /></div>
+      <figcaption>
+        <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
+        <h3>Research</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim provident ullam debitis quidem consequuntur
+          nulla suscipit natus ut exercitationem tenetur?
+        </p>
+        <textbutton class="bttn">Learn more</textbutton>
+
+      </figcaption>
+      <a href="#"></a>
+    </figure>
+  </section>
+
+  <section>
+    <div class="team">
+      <h2>WANT TO CONNECT WITH US?</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur<br> adipisicing elit. Aperiam, odio?</p>
+      <button>MEET OUR TEAM</button>
+    </div>
+  </section>
+
+  <footer>
+    <div class="q-links">
+      <h3>QUICK LINKS</h3>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="address">
+
+      <img src="images/location.svg" alt="location tag">
+      <p>Engineering College<br>Kulathoor Rd,<br>Sreekariyam, Thiruvananthapuram<br> Kerala 695016</p>
+    </div>
+
+    <div class="social-media">
+      <a href="#"><img src="images/facebook.svg" alt="facebook-icon"></a>
+      <a href="#"><img src="images/instagram.svg" alt="instagram-icon"></a>
+      <a href="#"><img src="images/email.svg" alt="email-icon"></a>
+      <p>Lorem ipsum dolor sit,<br> consectetur adipisicing elit.</p>
+
+    </div>
+
+  </footer>
 
 </body>
 
