--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           </li>
           <span class="nav-items hide-mobile">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact us</a></li>
           </span>
 
         </ul>
