events section made responsive

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
     </header>
   </section>
 
-  <section class="events" id="events">
+  <section class="event_section" id="events">
+
     <h1>Events</h1>
+    <div class="events">
     <figure class="snip1527">
       <div class="image"><img src="/images/Image 5.png" alt="pr-sample23" /></div>
       <figcaption>
@@ -132,10 +134,11 @@
       <a href="#"></a>
     </figure>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-
+  </div>
   </section>
-  <section class="events_research" id="events_research">
+  <section class="events_research_section" id="events_research">
     <h1>Research Projects</h1>
+    <div class="events">
     <figure class="snip1527">
       <div class="image"><img src="/images/Image 3.png" alt="pr-sample24" /></div>
       <figcaption>
@@ -150,6 +153,7 @@
       </figcaption>
       <a href="#"></a>
     </figure>
+  </div>
   </section>
 
   <section>
