image path typo

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1>Events</h1>
     <div class="events">
     <figure class="snip1527">
-      <div class="image"><img src="/images/Image 5.png" alt="pr-sample23" /></div>
+      <div class="image"><img src="images/Image 5.png" alt="pr-sample23" /></div>
       <figcaption>
         <div class="date"><span class="day">28</span><span class="month">Oct</span></div>
         <h3>Event Name 1</h3>
@@ -64,7 +64,7 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1527">
-      <div class="image"><img src="/images/Image 3.png" alt="pr-sample24" /></div>
+      <div class="image"><img src="images/Image 3.png" alt="pr-sample24" /></div>
       <figcaption>
         <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
         <h3>Event Name</h3>
@@ -78,7 +78,7 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1527">
-      <div class="image"><img src="/images/Image 4.png" alt="pr-sample25" /></div>
+      <div class="image"><img src="images/Image 4.png" alt="pr-sample25" /></div>
       <figcaption>
         <div class="date"><span class="day">01</span><span class="month">Dec</span></div>
         <h3>Event Name 3</h3>
@@ -92,7 +92,7 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1527">
-      <div class="image"><img src="/images/Image 5.png" alt="pr-sample23" /></div>
+      <div class="image"><img src="images/Image 5.png" alt="pr-sample23" /></div>
       <figcaption>
         <div class="date"><span class="day">28</span><span class="month">Oct</span></div>
         <h3>Event Name 1</h3>
@@ -106,7 +106,7 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1527">
-      <div class="image"><img src="/images/Image 3.png" alt="pr-sample24" /></div>
+      <div class="image"><img src="images/Image 3.png" alt="pr-sample24" /></div>
       <figcaption>
         <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
         <h3>Event Name</h3>
@@ -120,7 +120,7 @@
       <a href="#"></a>
     </figure>
     <figure class="snip1527">
-      <div class="image"><img src="/images/Image 4.png" alt="pr-sample25" /></div>
+      <div class="image"><img src="images/Image 4.png" alt="pr-sample25" /></div>
       <figcaption>
         <div class="date"><span class="day">01</span><span class="month">Dec</span></div>
         <h3>Event Name 3</h3>
@@ -140,7 +140,7 @@
     <h1>Research Projects</h1>
     <div class="events">
     <figure class="snip1527">
-      <div class="image"><img src="/images/Image 3.png" alt="pr-sample24" /></div>
+      <div class="image"><img src="images/Image 3.png" alt="pr-sample24" /></div>
       <figcaption>
         <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
         <h3>Research</h3>
